--- a/src/app/components/Requests/admin-list/admin-list.component.scss
+++ b/src/app/components/Requests/admin-list/admin-list.component.scss
@@ -12,3 +12,16 @@
   background-color: #f1f1f1;
   cursor: pointer;
 }
+.approved-icon{
+  padding: 2px;
+  border-radius: 8px;
+  background-color: #19a58e;
+}
+
+.rejected-icon {
+  padding: 2px;
+      text-align: center;
+        width: 41px;
+  border-radius: 8px;
+  background-color: red
+}
