--- a/src/app/components/Requests/superadmin-request-details/superadmin-request-details.component.html
+++ b/src/app/components/Requests/superadmin-request-details/superadmin-request-details.component.html
@@ -4,7 +4,10 @@
       <h3 class="py-4">Engage<span class="text-danger">X</span></h3>
       <div class="card shadow-sm animated flipInX delay-02">
         <div class="card-header">
-          <div class="card-header-title bold display-5">Super Admin Approval</div>
+                    <div [routerLink]="['/admin-requests-list']" class="card-header-title bold display-5"><i
+                        style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;"
+                        class="bi bi-arrow-left-short"></i> Security Approval</div>
+
         </div>
         <div class="card-body">
           <div class="row">
@@ -12,40 +15,49 @@
               <ul class="list-unstyled list-py-2 text-dark mb-0">
                 <li class="pb-0"><span class="card-subtitle">Status</span></li>
                 <li>
-                  <div>Super Admin Approval:</div>
+                  <div>Security Approval:</div>
                   <div class="status" [ngClass]="{
-                    'pending': userRequestDetails.approval.adminApprovalStatus === 1,
-                    'approved': userRequestDetails.approval.adminApprovalStatus === 2,
-                    'rejected': userRequestDetails.approval.adminApprovalStatus === 3
+                    'pending': userRequestDetails.approval.adminApprovalStatus === 0,
+                    'approved': userRequestDetails.approval.adminApprovalStatus === 1,
+                    'rejected': userRequestDetails.approval.adminApprovalStatus === 2
                   }">
+                    <i class="bi" [ngClass]="{
+                    'bi-hourglass-split': userRequestDetails.approval.adminApprovalStatus === 0,
+                    'bi-check2-all': userRequestDetails.approval.adminApprovalStatus === 1,
+                     'bi-x': userRequestDetails.approval.adminApprovalStatus === 2
+                      }"></i>
                     {{ userRequestDetails.approval.adminApprovalStatus | approvalStatus }}
                   </div>
                 </li>
                 <li>
-                  <div>Super Admin Approval:</div>
+                  <div>Security Approval:</div>
                   <div class="status" [ngClass]="{
-                    'pending': userRequestDetails.approval.superAdminApprovalStatus === 1,
-                    'approved': userRequestDetails.approval.superAdminApprovalStatus === 2,
-                    'rejected': userRequestDetails.approval.superAdminApprovalStatus === 3
-                  }">
+                    'pending': userRequestDetails.approval.superAdminApprovalStatus === 0,
+                    'approved': userRequestDetails.approval.superAdminApprovalStatus === 1,
+                    'rejected': userRequestDetails.approval.superAdminApprovalStatus === 2
+                  }"><i class="bi" [ngClass]="{
+                    'bi-hourglass-split': userRequestDetails.approval.superAdminApprovalStatus === 0,
+                     'bi-check2-all': userRequestDetails.approval.superAdminApprovalStatus === 1,
+                    'bi-x': userRequestDetails.approval.superAdminApprovalStatus === 2
+                                                      }"></i>
                     {{ userRequestDetails.approval.superAdminApprovalStatus | approvalStatus }}
                   </div>
                 </li>
                 <li>
-                  <div class="property">Full Name:</div>
-                  <div class="value">{{ userRequestDetails.customerName }}</div>
+                  <div class="property fw-bold">Customer Name:</div>
+                  <div class="value"><i class="bi bi-building"></i> : {{ userRequestDetails.customerName }}</div>
                 </li>
                 <li>
-                  <div class="property">EID:</div>
-                  <div class="value">{{ userRequestDetails.eid }}</div>
+                  <div class="property fw-bold">EID:</div>
+                  <div class="value"><i class="bi bi-credit-card"></i> : {{ userRequestDetails.eid }}</div>
                 </li>
                 <li>
-                  <div class="property">Trade License:</div>
-                  <div class="value">{{ userRequestDetails.tradeLicense }}</div>
+                  <div class="property fw-bold">Trade License:</div>
+                  <div class="value"><i class="bi bi-badge-tm"></i> : {{ userRequestDetails.tradeLicense }}</div>
                 </li>
                 <li>
-                  <div class="property">Authorised Person:</div>
-                  <div class="value">{{ userRequestDetails.authorisedPerson }}</div>
+                  <div class="property fw-bold">Authorised Person:</div>
+                  <div class="value"><i class="bi bi-person"></i> : {{ userRequestDetails.authorisedPerson }}</div>
                 </li>
                 <!-- Add other properties and values in the same format -->
               </ul>
@@ -54,24 +66,25 @@
               <ul class="list-unstyled list-py-2 text-dark mb-0">
                 <li class="pb-0"><span class="card-subtitle">Location</span></li>
                 <li>
-                  <div class="property">Emirate:</div>
+                  <div class="property fw-bold">Emirate:</div>
                   <div class="value">{{ userRequestDetails.user.location.emirate }}</div>
                 </li>
                 <li>
-                  <div class="property">Address:</div>
-                  <div class="value">{{ userRequestDetails.user.location.address }}</div>
+                  <div class="property fw-bold">Address:</div>
+                  <div class="value"><i class="bi bi-geo-alt"></i> : {{ userRequestDetails.user.location.address }}
+                  </div>
                 </li>
                 <li>
-                  <div class="property">Phone Number:</div>
-                  <div class="value">{{ userRequestDetails.mobile }}</div>
+                  <div class="fw-bold">Phone Number:</div>
+                  <div class="value"><i class="bi bi-phone"></i> : {{ userRequestDetails.mobile }}</div>
                 </li>
                 <li>
-                  <div class="property">Email:</div>
-                  <div class="value">{{ userRequestDetails.email }}</div>
+                  <div class="fw-bold">Email:</div>
+                  <div class="value"><i class="bi bi-envelope"></i> : {{ userRequestDetails.email }}</div>
                 </li>
                 <li>
-                  <div class="property">Campaign Content:</div>
-                  <div class="value">{{ userRequestDetails.campaignContent }}</div>
+                  <div class="fw-bold">Campaign Content:</div>
+                  <div class="value"><i class="bi bi-body-text"></i> : {{ userRequestDetails.campaignContent }}</div>
                 </li>
               </ul>
             </div>
