--- a/src/app/components/Requests/user-requets-details/user-requets-details.component.html
+++ b/src/app/components/Requests/user-requets-details/user-requets-details.component.html
@@ -4,7 +4,17 @@
       <h3 class="py-4">Engage<span class="text-danger">X</span></h3>
       <div class="card shadow-sm animated flipInX delay-02">
         <div class="card-header">
-          <div class="card-header-title bold">Customer Request Details</div>
+          <div class="d-flex justify-content-between">
+            <div class="card-header-title display-5">{{userRequestDetails.customerName}}</div>
+            <div class="d-flex gap-3">
+              <button class="btn btn-primary" [routerLink]="['/create-request']">
+                Request data
+              </button>
+              <button class="btn btn-primary" [routerLink]="['/create-request']">
+                Launch camapaign
+              </button>
+            </div>
+          </div>
         </div>
         <div class="card-body">
           <div class="row">
@@ -18,66 +28,58 @@
                     'approved': userRequestDetails.approval.adminApprovalStatus === 2,
                     'rejected': userRequestDetails.approval.adminApprovalStatus === 3
                   }">
-                    {{ userRequestDetails.approval.adminApprovalStatus | approvalStatus }}
+                  <i class="bi" [ngClass]="{
+                    'bi-hourglass-split': userRequestDetails.approval.adminApprovalStatus === 1,
+                    'bi-check2-all': userRequestDetails.approval.adminApprovalStatus === 2,
+                    'bi-x': userRequestDetails.approval.adminApprovalStatus === 3
+                  }"></i>  {{ userRequestDetails.approval.adminApprovalStatus | approvalStatus }}
                   </div>
                 </li>
                 <li>
-                  <div>Super Admin Approval:</div>
+                  <div>Security Approval:</div>
                   <div class="status" [ngClass]="{
                     'pending': userRequestDetails.approval.superAdminApprovalStatus === 1,
                     'approved': userRequestDetails.approval.superAdminApprovalStatus === 2,
                     'rejected': userRequestDetails.approval.superAdminApprovalStatus === 3
                   }">
-                    {{ userRequestDetails.approval.superAdminApprovalStatus | approvalStatus }}
+                    <i class="bi" [ngClass]="{
+                    'bi-hourglass-split': userRequestDetails.approval.superAdminApprovalStatus === 1,
+                    'bi-check2-all': userRequestDetails.approval.superAdminApprovalStatus === 2,
+                    'bi-x': userRequestDetails.approval.superAdminApprovalStatus === 3
+                  }"></i> {{ userRequestDetails.approval.superAdminApprovalStatus | approvalStatus }}
                   </div>
                 </li>
                 <li>
-                  <div class="property">Full Name:</div>
-                  <div class="value">{{ userRequestDetails.customerName }}</div>
+                  <div class="property"> Authorised Person:</div>
+                  <div class="value"> <i class="bi bi-person"></i> : {{ userRequestDetails.authorisedPerson }}</div>
                 </li>
-                <li>
-                  <div class="property">EID:</div>
-                  <div class="value">{{ userRequestDetails.eid }}</div>
-                </li>
-                <li>
-                  <div class="property">Trade License:</div>
-                  <div class="value">{{ userRequestDetails.tradeLicense }}</div>
-                </li>
-                <li>
-                  <div class="property">Authorised Person:</div>
-                  <div class="value">{{ userRequestDetails.authorisedPerson }}</div>
-                </li>
-                <!-- Add other properties and values in the same format -->
               </ul>
             </div>
             <div class="col-6">
               <ul class="list-unstyled list-py-2 text-dark mb-0">
-                <li class="pb-0"><span class="card-subtitle">Location</span></li>
-                <li>
-                  <div class="property">Emirate:</div>
-                  <div class="value">{{ userRequestDetails.user.location.emirate }}</div>
-                </li>
-                <li>
-                  <div class="property">Address:</div>
-                  <div class="value">{{ userRequestDetails.user.location.address }}</div>
-                </li>
                 <li>
                   <div class="property">Phone Number:</div>
-                  <div class="value">{{ userRequestDetails.mobile }}</div>
+                  <div class="value"><i class="bi bi-phone"></i> : {{ userRequestDetails.mobile }}</div>
                 </li>
                 <li>
                   <div class="property">Email:</div>
-                  <div class="value">{{ userRequestDetails.email }}</div>
+                  <div class="value"><i class="bi bi-envelope"></i> : {{ userRequestDetails.email }}</div>
                 </li>
-                  <li>
-                    <div class="property">Campaign Content:</div>
-                    <div class="value">{{ userRequestDetails.campaignContent }}</div>
-                  </li>
+                <li>
+                  <div class="property">EID:</div>
+                  <div class="value"><i class="bi bi-credit-card-2-front"></i> : {{ userRequestDetails.eid }}</div>
+                </li>
+                <li>
+                  <div class="property">Trade License:</div>
+                  <div class="value"><i class="bi bi-badge-tm"></i> : {{ userRequestDetails.tradeLicense }}</div>
+                </li>
+
               </ul>
             </div>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
