[update] added bigdata bpage

--- a/src/app/components/Requests/admin-request-details/admin-request-details.component.html
+++ b/src/app/components/Requests/admin-request-details/admin-request-details.component.html
@@ -4,7 +4,7 @@
       <h3 class="py-4">Engage<span class="text-danger">X</span></h3>
       <div class="card shadow-sm animated flipInX delay-02">
         <div class="card-header">
-          <div [routerLink]="['/superadmin-requests-list']" class="card-header-title bold display-5"><i style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;" class="bi bi-arrow-left-short"></i> Admin Approval</div>
+          <div [routerLink]="['/admin-requests-list']" class="card-header-title bold display-5"><i style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;" class="bi bi-arrow-left-short"></i> Admin Approval</div>
         </div>
         <div class="card-body">
           <div class="row">
