--- a/src/app/components/auth/sign-in/sign-in.component.html
+++ b/src/app/components/auth/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
 
     <div class="mx-auto" style="max-width: 30rem;">
       <!-- Card -->
-      <div class="card card-lg mb-5">
+      <div class="card shadow card-lg mb-5">
         <div class="card-body">
           <!-- Form -->
           <div class="text-center">
