--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -9,7 +9,7 @@
     </a>
     <div class="mx-auto" style="max-width: 35rem;">
       <!-- Card -->
-      <div class="card card-lg mb-5">
+      <div class="card shadow card-lg mb-5">
         <div class="card-body">
 
           <div class="text-center">
