--- a/src/app/components/Requests/admin-list/admin-list.component.html
+++ b/src/app/components/Requests/admin-list/admin-list.component.html
@@ -19,6 +19,11 @@
     <th>Action</th>
   </thead>
   <tbody>
+    <tr *ngIf="requestlist.length === 0">
+      <td colspan="9">
+        <p class="d-flex justify-content-center align-items-center">No data found</p>
+      </td>
+    </tr>
     <tr *ngFor="let item of requestlist">
       <td class="request-details" [routerLink]="['/admin-request-details/', item.userId]">
         <div>{{item.customerName}}</div>
@@ -42,10 +47,10 @@
         <div>{{item.campaignContent}}</div>
       </td>
       <td class="d-flex gap-3">
-        <span class="approved-icon" (click)="openVerticallyCentered(approveModel)"><i style="color: white; cursor: pointer;"
-            class="bi bi-check2-square p-3"></i></span>
-        <span class="rejected-icon" (click)="openVerticallyCentered(rejectModel)"><i style="color: white; cursor: pointer;"
-            class="bi bi-x-lg"></i></span>
+        <span class="approved-icon" (click)="openVerticallyCentered(approveModel)"><i
+            style="color: white; cursor: pointer;" class="bi bi-check2-square p-3"></i></span>
+        <span class="rejected-icon" (click)="openVerticallyCentered(rejectModel)"><i
+            style="color: white; cursor: pointer;" class="bi bi-x-lg"></i></span>
       </td>
 
       <ng-template #approveModel let-modal>
@@ -57,7 +62,8 @@
           <p>Are you sure it will be approved?&hellip;</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success" (click)="approve(1, item.requestId)" [routerLink]="['/admin-request-details/', item.userId]">Approve</button>
+          <button type="button" class="btn btn-success"
+            (click)="approve(1, item.requestId, item.userId)">Approve</button>
           <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
         </div>
       </ng-template>
@@ -71,7 +77,7 @@
           <p>Are you sure it will be reject?&hellip;</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" (click)="reject(2, item.requestId)" [routerLink]="['/admin-request-details/', item.userId]">Reject</button>
+          <button type="button" class="btn btn-danger" (click)="reject(2, item.requestId, item.userId)">Reject</button>
           <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
         </div>
       </ng-template>
