--- a/src/app/components/Requests/creates-request/creates-request.component.html
+++ b/src/app/components/Requests/creates-request/creates-request.component.html
@@ -5,9 +5,10 @@
       <div class="card shadow-sm animated flipInX delay-02">
         <div class="card-header">
          <div class="d-flex justify-content-between">
-          <div class="card-header-title display-5">Customer Request</div>
-          <div class="btn btn-primary">
-            <i class="bi bi-arrow-left-circle-fill"></i>
+          <div class="card-header-title display-5">
+        <div [routerLink]="['/user-request-details']" class="card-header-title bold display-5"><i
+          style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;"
+            class="bi bi-arrow-left-short"></i><span class="p-3">Customer Request</span></div>
           </div>
          </div>
         </div>
