--- a/src/app/components/Requests/user-requets-details/user-requets-details.component.scss
+++ b/src/app/components/Requests/user-requets-details/user-requets-details.component.scss
@@ -13,8 +13,86 @@
 
 
 .status {
-      width: 100px;
-        text-align: center;
-        border-radius: 8px;
-        color: white;
+  width: 100px;
+  text-align: center;
+  border-radius: 8px;
+  color: white;
+}
+
+.launch-campaign {
+  border-radius: 8px;
+  background-color: #19a58e;
+  padding: 3px;
+  color: white;
+  width: 40px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.create-request {
+  border-radius: 8px;
+  background-color: #0d6efd;
+  padding: 3px;
+  color: white;
+  width: 40px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.view-data {
+  border-radius: 8px;
+  background-color: #ffc107;
+  padding: 3px;
+  color: white;
+  width: 40px;
+  text-align: center;
+  cursor: pointer;
+}
+// Loader
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner * {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  background-color: #2a58ad;
+  border-radius: 1rem;
+  margin: 0 0.2rem;
+}
+
+.spinner .spinner-1 {
+  animation: fade 1.1s ease-in-out 0.18s infinite both;
+}
+
+.spinner .spinner-2 {
+  animation: fade 1.1s ease-in-out 0.36s infinite both;
+}
+
+.spinner .spinner-3 {
+  animation: fade 1.1s ease-in-out 0.54s infinite both;
+}
+@keyframes fade {
+  0% {
+    opacity: 0.35;
+    transform: scale(0.87);
+  }
+
+  37.5% {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  75% {
+    opacity: 0.35;
+    transform: scale(0.87);
+  }
+
+  100% {
+    opacity: 0.35;
+    transform: scale(0.87);
+  }
 }
