--- a/src/app/components/Requests/user-requets-details/user-requets-details.component.html
+++ b/src/app/components/Requests/user-requets-details/user-requets-details.component.html
@@ -13,7 +13,7 @@
               <a class="create-request" [routerLink]="['/create-request']"  placement="top" ngbTooltip="Request data">
                 <i class="bi bi-plus-circle"></i>
               </a>
-              <a class="launch-campaign" [routerLink]="['/create-request']" placement="top" ngbTooltip="Launch campaign">
+              <a class="launch-campaign" [routerLink]="['/user-launch-campaign', userRequestDetails.userId]" placement="top" ngbTooltip="Launch campaign">
                 <i class="bi bi-chat-left"></i>
               </a>
             </div>
