--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -52,8 +52,8 @@
   opacity: 0;
   top: calc(100% + 50px);
   box-shadow: 0 1.5rem 4rem rgba(145, 148, 158, 0.15);
+  transition: top 0.3s, opacity 0.3s;
   transition-delay: 2ms;
-  transition: top 0.3s 0.3s, opacity 0.3s 0.3s;
 }
 
 .menu-item {
