--- a/src/app/components/Requests/admin-list/admin-list.component.html
+++ b/src/app/components/Requests/admin-list/admin-list.component.html
@@ -46,12 +46,14 @@
       <td>
         <div>{{item.campaignContent}}</div>
       </td>
-      <td class="d-flex gap-3">
-        <span class="approved-icon" (click)="openVerticallyCentered(approveModel)"><i
-            style="color: white; cursor: pointer;" class="bi bi-check2-square p-3"></i></span>
-        <span class="rejected-icon" (click)="openVerticallyCentered(rejectModel)"><i
-            style="color: white; cursor: pointer;" class="bi bi-x-lg"></i></span>
-      </td>
+    <td class="d-flex gap-3">
+      <span class="approved-icon" *ngIf="adminApprovalStatus === 0" (click)="openVerticallyCentered(approveModel)"><i
+          style="color: white; cursor: pointer;" class="bi bi-check2-square p-3"></i></span>
+      <span class="rejected-icon" *ngIf="adminApprovalStatus === 0" (click)="openVerticallyCentered(rejectModel)"><i
+          style="color: white; cursor: pointer;" class="bi bi-x-lg"></i></span>
+      <span *ngIf="adminApprovalStatus === 2" class="rejected"><i class="bi bi-x"></i>Rejected</span>
+      <span *ngIf="adminApprovalStatus === 1" class="approved"><i class="bi bi-check2-all"></i>Approved</span>
+    </td>
 
       <ng-template #approveModel let-modal>
         <div class="modal-header">
@@ -63,7 +65,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-success"
-            (click)="approve(1, item.requestId, item.userId)">Approve</button>
+            (click)="approve(1, item)">Approve</button>
           <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
         </div>
       </ng-template>
@@ -77,7 +79,7 @@
           <p>Are you sure it will be reject?&hellip;</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" (click)="reject(2, item.requestId, item.userId)">Reject</button>
+          <button type="button" class="btn btn-danger" (click)="reject(2, item)">Reject</button>
           <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
         </div>
       </ng-template>
